--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,11 +1,4 @@
 {
-
-    
-
-    
-
-    
-
     "specialization": {
     },
 
@@ -18,6 +11,14 @@
                 "arguments": [ "path:./.build" ]
             }
         },
+        
+        "cors": {
+            "enabled": true,
+            "priority": 119,
+            "module": {
+              "name": "path:./middlewares/cors"
+            }
+          },
 
         "router": {
             "module": {
